organizr/organizr-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: organizr
  namespace: ht
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    k8s-app: organizr
