organizr/organizr-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: organizr
  namespace: ht
spec:
  hosts:
    - the.frost.haus
    - organizr.the.frost.haus
  gateways:
    - default/service-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: organizr
